cleanup Files modified - [MyFees.html,FindForm.html,MunicipalityCheckOut.html,MyCart.html,ViewProject.html,MunicipalityCheckOut.variables.json,Forms.html,ViewInspection.html,pom.xml]

--- a/src/main/webapp/pages/FindForm/FindForm.html
+++ b/src/main/webapp/pages/FindForm/FindForm.html
@@ -582,6 +582,6 @@
     </wm-content>
     <wm-footer content="footer" name="footer1"></wm-footer>
     <wm-view class="dialog-view" name="view1">
-        <wm-iframedialog name="iframedialog1" url="bind:Variables.stvFormLink.dataSet.dataValue" width="80%" title="Form"></wm-iframedialog>
+        <wm-iframedialog name="iframedialog1" url="bind:Variables.stvFormLink.dataSet.dataValue" width="90%" title="View Form" iconclass="wi wi-assignment" height="800px" oktext="Close"></wm-iframedialog>
     </wm-view>
 </wm-page>
