--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -83,7 +83,7 @@
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn16"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn17">
                                         <wm-composite name="composite1" required="true">
-                                            <wm-label class="col-md-3 control-label" name="label4" caption="Status"></wm-label>
+                                            <wm-label class="col-md-3 form-control-static" name="label4" caption="Status" fontweight="bold"></wm-label>
                                             <wm-container class="col-md-9" name="container2_1">
                                                 <wm-select name="selectStatus" dataset="bind:Variables.FormStatus.dataSet" datafield="All Fields" displayfield="status" datavalue="bind:Variables.stvCurrentStatus.dataSet" required="true"></wm-select>
                                             </wm-container>
@@ -95,7 +95,7 @@
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn18"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn19">
                                         <wm-composite name="composite2" required="true">
-                                            <wm-label class="col-md-3 control-label" name="label5" caption="Notes"></wm-label>
+                                            <wm-label class="col-md-3 form-control-static" name="label5" caption="Notes" fontweight="bold"></wm-label>
                                             <wm-container class="col-md-9" name="container3">
                                                 <wm-textarea name="textareaNotes" placeholder="Please enter your comments" updateon="default"></wm-textarea>
                                             </wm-container>
