--- a/src/main/webapp/pages/ViewInspection/ViewInspection.html
+++ b/src/main/webapp/pages/ViewInspection/ViewInspection.html
@@ -74,7 +74,7 @@
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn16"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn17">
                                         <wm-composite name="composite1" required="true">
-                                            <wm-label class="col-md-3 control-label" name="label4" caption="Outcome"></wm-label>
+                                            <wm-label class="col-md-3 form-control-static" name="label4" caption="Outcome" fontweight="bold"></wm-label>
                                             <wm-container class="col-md-9" name="container2_1">
                                                 <wm-select name="selectOutcome" required="true" dataset="bind:Variables.lvOutcomes.dataSet" datafield="All Fields" displayfield="outcome" datavalue="bind:Variables.lvInspection.dataSet.data[$i].inspectionOutcomeId"></wm-select>
                                             </wm-container>
@@ -86,7 +86,7 @@
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn18"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn19">
                                         <wm-composite name="composite2" required="true">
-                                            <wm-label class="col-md-3 control-label" name="label5" caption="Notes"></wm-label>
+                                            <wm-label class="col-md-3 form-control-static" name="label5" caption="Notes" fontweight="bold"></wm-label>
                                             <wm-container class="col-md-9" name="container3">
                                                 <wm-textarea name="textareaNotes" placeholder="Please enter your comments" updateon="default"></wm-textarea>
                                             </wm-container>
