--- a/src/main/webapp/pages/MyFees/MyFees.html
+++ b/src/main/webapp/pages/MyFees/MyFees.html
@@ -58,7 +58,14 @@
         </wm-page-content>
     </wm-content>
     <wm-footer content="footer" name="footer1"></wm-footer>
+    <wm-view class="dialog-view" name="view3">
+        <wm-pagedialog name="pagedialogViewForm" oktext="Close" content="_viewForm" modal="true" class="modal-larger" title="Form">
+            <wm-param name="FormGUID" value="bind:Widgets.gridUnpaidFees.selecteditem.formGuid" type="string"></wm-param>
+        </wm-pagedialog>
+    </wm-view>
     <wm-view class="dialog-view" name="view2">
-        <wm-iframedialog name="iframedialog1" url="bind:Variables.stvFormLink.dataSet.dataValue" title="View Form" width="90%" height="800px" iconclass="wi wi-assignment" oktext="Close"></wm-iframedialog>
+        <wm-pagedialog name="pagedialogViewInspection" title="Inspection" oktext="Close" content="_viewInspection" class="modal-larger" modal="true">
+            <wm-param name="inspectionGuid" value="bind:Widgets.gridUnpaidFees.selecteditem.formGuid" type="string"></wm-param>
+        </wm-pagedialog>
     </wm-view>
 </wm-page>
