--- a/src/main/webapp/pages/_viewForm/_viewForm.html
+++ b/src/main/webapp/pages/_viewForm/_viewForm.html
@@ -24,7 +24,7 @@
                                 <wm-gridrow name="gridrow98" padding=".2em unset">
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn181"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="8" name="gridcolumn182" horizontalalign="center">
-                                        <wm-label padding="unset 0.5em" name="labelHostil" caption="Please Take Caution" backgroundcolor="yellow" fontweight="bold" show="bind:isHostile"></wm-label>
+                                        <wm-label padding="unset 0.5em" name="labelHostil" caption="Please Take Caution" backgroundcolor="yellow" fontweight="bold" show="bind:!!isHostile"></wm-label>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn183"></wm-gridcolumn>
                                 </wm-gridrow>
